Sander Background Static Logo mit Chase hinzugefügt

--- a/platformio.ini
+++ b/platformio.ini
@@ -711,3 +711,8 @@ monitor_filters = esp32_exception_decoder
 board_build.flash_mode = dio
 custom_usermods = *   ; Expands to all usermods in usermods folder
 board_build.partitions = ${esp32.extreme_partitions}  ; We're gonna need a bigger boat
+
+
+[env:esp32dev_sander]
+extends = env:esp32dev
+custom_usermods = Sander_Logo_Chase
